--- a/style.css
+++ b/style.css
@@ -73,6 +73,35 @@ body{
 .tepa{
     width: 270px;
     height: 250px;
+    display: flex;
     border-radius: 4px;
     background-color: #F5F5F5;
 }
+.bitta{
+   position: absolute;
+   left: 389px;
+   top: 913px;
+}
+.bitt{
+    position: absolute;
+    left: 389px;
+    top: 963px;
+ }
+ .coat{
+    width: 118px;
+    height: 24px;
+    font-weight: 500;
+    font-size: 19px;
+    margin: 0;
+    margin-bottom: 8px;
+ }
+ .tepa :nth-child(1){
+    width: 190px;
+    height: 180px;
+    margin-left: 40px;
+    margin-top: 35px;
+ }
+ .price{
+    margin: 0;
+    margin-bottom: 8px;
+ }
